--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -9,52 +9,14 @@
 	<div class="flex vertical start" x-data="form">
 		<h1>Sign Up</h1>
 		<form class="interior flex vertical start" method="post">
-			<div class="interior flex horizontal center">
-				<input 
-					type="text" 
-					name="username" 
-					id="su-uname" 
-					placeholder="Username" 
-					x-model="username"
-				>
-			</div>
-			<div class="interior flex horizontal center">
-				<input 
-					type="text" 
-					name="email" 
-					id="su-email" 
-					placeholder="Email (Optional)" 
-					x-model="email"
-				>
-			</div>
+			<input style="width: auto" type="text" name="username" id="username" placeholder="Username" x-model="username">
+			<input style="width: auto" type="text" name="email" id="email" placeholder="Email (Optional)" x-model="email">
 			<span :class="emailempty()" style="--color1: var(--nord-orange); --color2: var(--nord-text)">An email is strongly recommended; without one you will not be able to recover your account should you lose your password.</span>
-			<div class="interior flex horizontal center">
-				<input 
-					type="password" 
-					name="password1" 
-					id="password1" 
-					placeholder="Password"
-					x-model="password1"
-					:class="passwdmatch()[0]"
-					x-ref="password1"
-				>
-			</div>
-			<div class="interior flex horizontal center">
-				<input 
-					type="password" 
-					name="password2" 
-					id="cpassword2" 
-					placeholder="Confirm Password"
-					x-model="password2"
-					:class="passwdmatch()[0]"
-					x-ref="password2"
-				>
-			</div>
+			<input style="width: auto" type="password" name="password1" id="password1" placeholder="Password" x-model="password1" :class="passwdmatch()[0]" x-ref="password1">
+			<input style="width: auto" type="password" name="password2" id="password2" placeholder="Confirm Password"x-model="password2" :class="passwdmatch()[0]" x-ref="password2">
 			<span class="small">Already have an account? <a href="/Login">Log in!</a></span>
 			<span :class="passwdmatch()[1]" style="--color1: var(--nord-red); --color2: var(--nord-text)">Passwords do not match</span>
-			<div class="interior flex horizontal center">
-				<input type="submit">
-			</div>
+			<a><button type="submit">Sign Up</button></a>
 		</form>
 	</div>
 </div>
